# lkm

./: .gitignore  README.md
spec/: entry-prelude-object-model.spec  组件化内核规格.md
spec/pic/: Handler模型.excalidraw  上下文与资源句柄.excalidraw  引导早期阶段的对象.excalidraw  流的切换.excalidraw  流的符号.excalidraw  系统层次的主动与被动关系.excalidraw
tools/check/: pyproject.toml
tools/check/src/check_tool/: __init__.py  __main__.py  check_json.py
tools/check/tests/: test_check_tool.py
tools/common/: pyproject.toml
tools/common/src/common/: __init__.py  defaults.py  derive_types.py  io.py  model_json.py  model_types.py  schemas.py  spec_ast.py  view_json.py  view_types.py
tools/common/tests/: test_common_dependencies.py
tools/derive/: pyproject.toml
tools/derive/src/derive_tool/: __init__.py  __main__.py  derive_json.py  engine.py  model_json.py
tools/derive/tests/: test_derive_tool.py
tools/model/: pyproject.toml
tools/model/src/model_tool/: __init__.py  __main__.py  ast_json.py  builder.py  model_json.py
tools/model/tests/: test_model_tool.py
tools/parse/: pyproject.toml
tools/parse/src/parse_tool/: __init__.py  __main__.py  ast_json.py  parser.py
tools/parse/tests/: test_parse_tool.py
tools/pyveri/: DEVELOPMENT.md  README.md  pyproject.toml
tools/pyveri/src/pyveri/: __init__.py  __main__.py  ast.py  derive.py  model.py  parser.py  view.py
tools/pyveri/tests/: README.md  test_cli.py  test_derive.py  test_model.py  test_packaging.py  test_parser.py  test_toolchain_boundaries.py
tools/render/: pyproject.toml
tools/render/src/render_tool/: __init__.py  __main__.py  render.py
tools/render/tests/: test_render_tool.py
tools/verifier_py/: README.md  pyproject.toml
tools/verifier_py/tests/: README.md
tools/view/: pyproject.toml
tools/view/src/view_tool/: __init__.py  __main__.py  builder.py  view_json.py
tools/view/tests/: test_view_tool.py
