[project]
name = "lkm-parse"
version = "0.1.0"
description = "Parse LKM .spec files into AST intermediate JSON."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lkm-parse = "parse_tool.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
