[project]
name = "pyveri"
version = "0.1.0"
description = "Python static derivation verifier for LKM object model specs."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pyveri = "pyveri.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
