[project]
name = "lkm-render"
version = "0.1.0"
description = "Render LKM view intermediate JSON to final output formats."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lkm-render = "render_tool.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
