[project]
name = "lkm-view"
version = "0.1.0"
description = "Build LKM view intermediate JSON from model or derivation data."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lkm-view = "view_tool.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
